2007-05-16  Nikolaj Schumacher  <n_schumacher@web.de>  (tiny change)

	* progmodes/compile.el (compilation-handle-exit): Quote first
	argument of `run-hook-with-args'.

2007-05-16  Juanma Barranquero  <lekktu@gmail.com>

	* buff-menu.el (Buffer-menu-sort-column):
	* dabbrev.el (dabbrev-upcase-means-case-search):
	* dired.el (dired-recursive-deletes, dired-recursive-copies):
	* info.el (Info-current-subfile):
	* ls-lisp.el (ls-lisp-verbosity):
	* msb.el (msb-menu-cond):
	* pcvs.el (cvs-dired-use-hook):
	* simple.el (set-mark-command-repeat-pop):
	* time.el (display-time-24hr-format, display-time-mail-file):
	Doc fixes.

	* tutorial.el (get-lang-string, tutorial--find-changed-keys):
	* printing.el (pr-ps-fast-fire): Fix typos in docstrings.

	* view.el (view-inhibit-help-message): Fix typo in docstring.
	(view-scroll-auto-exit, view-try-extend-at-buffer-end): Doc fixes.

2007-05-14  Eli Zaretskii  <eliz@gnu.org>

	* mail/rmail.el (rmail-convert-to-babyl-format): Check
	content-transfer-encoding _last_, because we need its position in
	base64-header-field-end.

2007-05-14  Juanma Barranquero  <lekktu@gmail.com>

	* files.el (mode-require-final-newline, require-final-newline)
	(enable-local-variables, enable-local-eval): Doc fixes.

2007-05-10  Edward O'Connor  <hober0@gmail.com>  (tiny change)

	* progmodes/python.el (python-font-lock-keywords)
	(python-open-block-statement-p, python-mode): Add support for the new
	"with" keyword.

2007-05-10  Richard Stallman  <rms@gnu.org>

	* international/iso-cvt.el (iso-cvt-read-only): Ignore arguments.
	(iso-cvt-write-only): Likewise.

	* emacs-lisp/easy-mmode.el (define-minor-mode):
	Fix generated doc string.

	* startup.el (fancy-splash-text): Add URL of guided tour.
	Adjust horizontal and vertical whitespace.

	* progmodes/compile.el (compilation-handle-exit):
	Use run-hook-with-args to run compilation-finish-functions.

	* files.el (file-start-mode-alist): New variable.
	(magic-mode-regexp-match-limit): Doc fix.