@@ -616,7 +616,7 @@ the text at the beginning of the buffer matches @var{regexp} and
 @code{auto-mode-alist} gets to decide the mode.
 @end defvar
 
-@defvar file-start-mode-alist
+@defvar magic-fallback-mode-alist
 This works like @code{magic-mode-alist}, except that it is handled
 only if @code{auto-mode-alist} does not specify a mode for this file.
 @end defvar
